# housing-court-prep

./: .gitignore  app.py  data_format.py  helpers.py  main.py  pyproject.toml  requirements.txt
static/styles/: style.css
templates/: data.html  form.html
