[tool.poetry]
name = "housing_court_prep"
version = "0.1.0"
description = ""
authors = ["Andy Friedman <afriedman412@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
